# mkdocs-autoapi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dev_requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: create-release.yml  publish-to-pypi.yml
docs/: index.md  usage.md
mkdocs_autoapi/: __init__.py  autoapi.py  logging.py  plugin.py
mkdocs_autoapi/generate_files/: __init__.py  editor.py  nav.py
mkdocs_autoapi/literate_nav/: __init__.py  exceptions.py  globber.py  parser.py  resolve.py
mkdocs_autoapi/section_index/: __init__.py  rewrite.py  section_page.py
