[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-autoapi"
version = "0.1.5"
description = "MkDocs plugin providing automatic API reference generation"
dependencies = [
    "mkdocs>=1.4.0",
    "mkdocstrings>=0.19.0",
]
requires-python = ">=3.6"
authors = [
    { name = "Jacob Ayers", email = "jcayers20@gmail.com" }
]
keywords = ["mkdocs", "documentation", "api", "autoapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points.'mkdocs.plugins']
mkdocs-autoapi = 'mkdocs_autoapi.plugin:AutoApiPlugin'

[project.optional-dependencies]
crystal = ["mkdocstrings-crystal>=0.3.4"]
python-legacy = ["mkdocstrings-python-legacy>=0.2.1"]
python = ["mkdocstrings-python>=0.5.2"]

[project.urls]
Repository = "https://github.com/jcayers20/mkdocs-autoapi"
Issues = "https://github.com/jcayers20/mkdocs-autoapi/issues"
